# best-2hour-build

./: AGENTS.md  README.md
2026-04-23-diffgate/: .env.example  Dockerfile  PLAN.md  README.md  REVIEW.md  docker-compose.yml  pyproject.toml
2026-04-23-diffgate/diffgate/: __init__.py  analyzer.py  cli.py  commenter.py  config.py  diff_parser.py  main.py  models.py  prompts.py  webhook.py
2026-04-23-diffgate/docs/plans/: 2026-04-23-diffgate-implementation-plan-v5.md  2026-04-23-diffgate-pr-webhook-design.md
2026-04-23-diffgate/docs/plans/archive/: 2026-04-23-diffgate-implementation-plan-v2.md  2026-04-23-diffgate-implementation-plan-v3.md  2026-04-23-diffgate-implementation-plan-v4.md  2026-04-23-diffgate-implementation-plan.md
2026-04-23-diffgate/docs/plans/reviews/: simple-review.codex.md
2026-04-23-diffgate/tests/: test_analyzer.py  test_cli.py  test_commenter.py  test_config.py  test_diff_parser.py  test_main.py  test_models.py  test_webhook.py
2026-04-30-demon-novel-guide/: PLAN.md  README.md  REVIEW.md  app.js  index.html  styles.css
2026-04-30-demon-novel-guide/docs/plans/: 2026-04-30-demon-novel-guide.md
